--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ button:active{
     position: absolute;
     background-color: gray;
     background-position: center;
+    border-radius: 10px;
     text-align: center;
     top: 25%;
     left: 25%;
@@ -48,6 +49,16 @@ button:active{
     height: 50%;
     font-size: 100%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#IntroButton
+{
+    position: relative;
+    width: 20%;
+    height: 20%;
+    font-size: xx-large;
+    background-color: #585858;
+    background-position: center;
 }
 
 .GameOverScreen
@@ -79,19 +90,21 @@ button:active{
     position:relative;
 }
 
-
-
+/*
+For custom animation curves
+https://cubic-bezier.com/#.86,.43,.38,1.29
+*/
 #PlayerChar{
     background-image:url("adventurer_o_idle.png");
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: 10vh;
+    background-position: left;
     position: absolute;
     width: 100%;
     height: 100%;
     
     animation-name: PlayerAnim;
-    animation-timing-function: ease-in;
+    animation-timing-function: cubic-bezier(.86,.43,.38,1.29);
     animation-direction:normal;
     animation-duration: 0.5s;
 
@@ -113,10 +126,15 @@ button:active{
     background-image:url("orc_o.png");
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: 90vh;
+    background-position: right;
     position: absolute;
     width: 100%;
     height: 100%;
+    animation-name: EnemyIntroAnim;
+    animation-timing-function: cubic-bezier(.86,.43,.38,1.29);
+    animation-direction:normal;
+    animation-duration: 0.5s;
+    
 }
 
 #EnemyMage{
@@ -127,18 +145,28 @@ button:active{
     position: absolute;
     width: 100%;
     height: 100%;
+    animation-name: EnemyIntroAnim;
+    animation-timing-function: cubic-bezier(.86,.43,.38,1.29);
+    animation-direction:normal;
+    animation-duration: 0.5s;
+    
 }
 
 #EnemyTownsfolk{
     background-image:url("townsfolk_o.png");
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: right ;
     position: absolute;
     width: 100%;
     height: 100%;
+    animation-name: EnemyIntroAnim;
+    animation-timing-function: cubic-bezier(.86,.43,.38,1.29);
+    animation-direction:normal;
+    animation-duration: 0.5s;
+    
 }
-@keyframes EnemyAnim
+@keyframes EnemyIntroAnim
 {
     from
     {
@@ -146,10 +174,23 @@ button:active{
     }
     to
     {
-      transform: translateX(0);
+        transform: translateX(0);
     }
 }
-#button_holder{
+
+@keyframes EnemyExitAnim
+{
+    from
+    {
+        transform: translateX(0);
+    }
+    to
+    {
+        transform: translateX(50vh);
+    }
+}
+
+#buttonHolder{
     width: 100%;
     position:absolute;
     bottom: 10%;
