--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ https://cubic-bezier.com/#.86,.43,.38,1.29
     animation-timing-function: cubic-bezier(.86,.43,.38,1.29);
     animation-direction:normal;
     animation-fill-mode: forwards;
-    animation-duration: 0.5s;
+    animation-duration: 0.3s;
     
 }
 
@@ -149,8 +149,8 @@ https://cubic-bezier.com/#.86,.43,.38,1.29
     animation-name: EnemyIntroAnim;
     animation-timing-function: cubic-bezier(.86,.43,.38,1.29);
     animation-direction:normal;
-    animation-fill-mode: forwards;
-    animation-duration: 0.5s;
+    animation-fill-mode:forwards;
+    animation-duration: 0.3s;
     
 }
 
@@ -166,7 +166,7 @@ https://cubic-bezier.com/#.86,.43,.38,1.29
     animation-timing-function: cubic-bezier(.86,.43,.38,1.29);
     animation-direction:normal;
     animation-fill-mode: forwards;
-    animation-duration: 0.5s;
+    animation-duration: 0.3s;
     
 }
 @keyframes EnemyIntroAnim
@@ -174,6 +174,7 @@ https://cubic-bezier.com/#.86,.43,.38,1.29
     from
     {
         transform: translateX(50vh);
+        
     }
     to
     {
@@ -185,11 +186,13 @@ https://cubic-bezier.com/#.86,.43,.38,1.29
 {
     from
     {
-        transform: translateX(0);
+        transform: translateY(0) rotate(0);
+        
     }
     to
     {
-        transform: translateX(50vh);
+        transform: translateY(50vh) rotate(50deg);
+        
     }
 }
 
