--- a/style.css
+++ b/style.css
@@ -196,6 +196,16 @@ https://cubic-bezier.com/#.86,.43,.38,1.29
     }
 }
 
+#GameTimerBar
+{
+    width: 100%;
+    height: 2%;    
+    position: absolute;
+    background-size: contain;
+    background: yellow;
+    bottom: 0;
+}
+
 #buttonHolder{
     width: 100%;
     position:absolute;
